add name to HCRRound

--- a/src/aind_hcr_data_loader/examples/hcr_dataset_usage.ipynb
+++ b/src/aind_hcr_data_loader/examples/hcr_dataset_usage.ipynb
@@ -325,6 +325,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "273f3e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'segmentation_channels': {'background': '405', 'nuclear': '594'},\n",
+       " 'spot_channels': ['488', '514', '561'],\n",
+       " 'round': 1,\n",
+       " 'stitching_channels': ['488', '514', '561'],\n",
+       " 'gene_dict': {'405': {'gene': 'Rn28s',\n",
+       "   'barcode': '',\n",
+       "   'fluorophore': '',\n",
+       "   'wavelength': 'dtype:',\n",
+       "   'round': 1},\n",
+       "  '488': {'gene': 'GFP',\n",
+       "   'barcode': 'B1',\n",
+       "   'fluorophore': '',\n",
+       "   'wavelength': '488,',\n",
+       "   'round': 1},\n",
+       "  '514': {'gene': 'Slc17a7',\n",
+       "   'barcode': 'B2',\n",
+       "   'fluorophore': '',\n",
+       "   'wavelength': '514,',\n",
+       "   'round': 1},\n",
+       "  '561': {'gene': 'Gad2',\n",
+       "   'barcode': 'B3',\n",
+       "   'fluorophore': '',\n",
+       "   'wavelength': '561,',\n",
+       "   'round': 1},\n",
+       "  '594': {'gene': 'Syto59',\n",
+       "   'barcode': '',\n",
+       "   'fluorophore': '',\n",
+       "   'wavelength': 'dtype:',\n",
+       "   'round': 1}},\n",
+       " 'tile_subset': ['Tile_X_0002_Y_0002_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0002_Y_0003_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0002_Y_0004_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0003_Y_0002_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0003_Y_0003_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0003_Y_0004_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0004_Y_0002_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0004_Y_0003_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0004_Y_0004_Z_0000_ch_405.zarr',\n",
+       "  'Tile_X_0002_Y_0002_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0002_Y_0003_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0002_Y_0004_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0003_Y_0002_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0003_Y_0003_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0003_Y_0004_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0004_Y_0002_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0004_Y_0003_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0004_Y_0004_Z_0000_ch_488.zarr',\n",
+       "  'Tile_X_0002_Y_0002_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0002_Y_0003_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0002_Y_0004_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0003_Y_0002_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0003_Y_0003_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0003_Y_0004_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0004_Y_0002_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0004_Y_0003_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0004_Y_0004_Z_0000_ch_514.zarr',\n",
+       "  'Tile_X_0002_Y_0002_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0002_Y_0003_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0002_Y_0004_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0003_Y_0002_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0003_Y_0003_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0003_Y_0004_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0004_Y_0002_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0004_Y_0003_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0004_Y_0004_Z_0000_ch_561.zarr',\n",
+       "  'Tile_X_0002_Y_0002_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0002_Y_0003_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0002_Y_0004_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0003_Y_0002_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0003_Y_0003_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0003_Y_0004_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0004_Y_0002_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0004_Y_0003_Z_0000_ch_594.zarr',\n",
+       "  'Tile_X_0004_Y_0004_Z_0000_ch_594.zarr'],\n",
+       " 's3_location': 's3://aind-open-data/HCR_747667_2025-04-18_13-00-00_processed_2025-05-13_23-21-01',\n",
+       " 's3_location_tile-subset': 's3://aind-open-data/HCR_747667_2025-04-18_13-00-00_processed_2025-05-13_23-21-01/tile_subset/'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# processing manifest\n",
+    "dataset.rounds[\"R1\"].processing_manifest"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d07e575c",
    "metadata": {},
